# qa_guru_20

./: .env.bstack  .env.local_emulator  .gitignore  config.py  pyproject.toml
tests/: conftest.py  test_onboarding.py
